# omni-desk-ai

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .yamllint.yml  ADMIN_WEBHOOK_PLANNER_HARDENING.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FASTAPI_TEST_AND_MODEL_HOTFIX.md  GITHUB_PUSH.md  GOVERNED_SELF_IMPROVEMENT.md  HTTPX_OPTIONAL_IMPORT_FIX.md  INDUSTRIAL_GA_EVIDENCE.md  INDUSTRIAL_SOURCE_MAIN_RESTORE.md  LEARNING_L9_UPGRADES.md  LICENSE  MIGRATION.md  MODEL_ROUTER.md  Makefile  NATIVE_BUILD_ATTEMPT_1.11.md  NEXT_10_UPGRADES.md  OPENCLAW_CODEX_ALIGNMENT_1.11.md  P0_P1_CORE_UPGRADES.md  PATCH_MANIFEST_0.7.38.md  PATCH_MANIFEST_0.7.39.md  PATCH_MANIFEST_1.01.md  PATCH_MANIFEST_1.02.md  PATCH_MANIFEST_1.03.md  PATCH_MANIFEST_1.04.md  PATCH_MANIFEST_1.05.md  PATCH_MANIFEST_1.06.md  PATCH_MANIFEST_1.07.md  PATCH_MANIFEST_1.08.md  PATCH_MANIFEST_1.09.md  PATCH_MANIFEST_1.10.md  PATCH_MANIFEST_1.11.md  (+37 more)
.ci/: pyright-repair-trigger-2  pyright-repair-trigger-3  readiness-type-repair-trigger  remaining-pyright-repair-trigger
.github/: CODEOWNERS  actions-pin-contract-refresh  branch-protection.required.json  dependabot.yml  team-governance.required.json  toolchains.json
Omni-desk-AI-1.11.8-source-gated-enterprise-chat-candidate/: SHA256SUMS.txt  SOURCE_COMMIT.txt
apps/: README.md  RELEASE_CHECKLIST.md
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
deploy/: sandbox-runner.env.example  sandbox-runner.service
docs/: BACKUP_RESTORE.md  BRANCH_PROTECTION.md  CHANGESET_BIGSELLER_P0_P1_HARDENING.done  CHANGESET_BIGSELLER_P0_P1_HARDENING.marker  CHANGESET_BIGSELLER_P0_P1_HARDENING.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_2.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_3.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_4.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_5.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_6.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_7.md  CHANGESET_BIGSELLER_P0_P1_HARDENING_REVIEW_8.md  CODE_REVIEW_OPTIMIZATION_1.11.2.md  CODE_REVIEW_OPTIMIZATION_1.11.4.md  CODE_REVIEW_OPTIMIZATION_1.11.5.md  CODE_REVIEW_OPTIMIZATION_1.11.6.md  CODE_REVIEW_OPTIMIZATION_1.11.7.md  CODE_REVIEW_OPTIMIZATION_1.11.8.md  ENTERPRISE_GA13_RUNTIME.md  ENTERPRISE_GA14_PRODUCTION_CLOSURE.md  ENTERPRISE_GA15_CLOSURE.md  ENTERPRISE_GA16_HA_CLOSURE.md  ENTERPRISE_GA17_FULL_CLOSURE.md  EXTERNAL_GA_EVIDENCE_RUNBOOK.md  INDUSTRIAL_GA_REMEDIATION_2026-07-12.md  INDUSTRIAL_L4_OPERATOR_RUNBOOK.md  INDUSTRIAL_P0_P1_P2_REMEDIATION.md  INDUSTRIAL_READINESS_1.11.1_POST_TRI_APP.md  INDUSTRIAL_REREVIEW_REMEDIATION_2026-07-11.md  INDUSTRIAL_RUNTIME_HARDENING.md  INDUSTRIAL_RUNTIME_OPTIMIZATION_2026-07-17.md  LEARNING_OBSERVABILITY.md  NATIVE_CHANNELS.md  OBSERVABILITY_OTEL_PRODUCTION_CHAIN.md  OFFLINE_FIRST_RECONNECT_UPDATE.md  OPENCLAW_ALIGNMENT.md  OPERATIONS.md  P0_LIVE_GA_CONTROL_CLOSURE.md  P0_P1_P2_FEASIBLE_CLOSURE_1.12.7.md  (+30 more)
examples/: config.enterprise.yaml  config.local.yaml  config.production.yaml  config.staging.yaml  config.yaml
infra/: README.md
omnidesk_agent/: __init__.py  cli.py  config.py  daemon.py  observability.py  observability_otel.py  observability_probe.py  observability_tracing.py  onboarding.py  repair_contracts.py  self_healing.py  server.py
patches/: v1.11.7-apply.patch  v1.11.8-apply.patch  v1.12.0-apply.patch
release/: AGENTS.md  evidence-policy-v1.json  external-ga-evidence.required.json  ios-mobile-device-smoke-2026-06-17-v1.11.1.md  ios-mobile-device-smoke-2026-06-17-v1.11.4.md  ios-mobile-device-smoke-2026-06-17.md  license-policy.json  mobile-toolchain-release-workflow.yml.txt  notes-source-governance-closure.txt  production-evidence.manifest.json  real-ga-evidence-audit-1.10.json  real-ga-evidence-audit-1.11.7.json  real-ga-evidence-audit-1.11.8.json  real-ga-evidence-audit-1.11.json  real-ga-evidence-audit-1.12.0.json  real-ga-evidence-audit-1.12.1.json  real-ga-evidence-audit-1.12.2.json  real-ga-evidence-audit-1.12.3.json  real-ga-evidence-audit-1.12.4.json  real-ga-evidence-audit-1.12.5.json  real-ga-evidence-audit-1.12.6.json  real-ga-evidence-audit-1.12.7.json  source-governance-closure.md  source-maturity-targets.json
scripts/: _apply_industrial_l4_remediation.py  _fix_l4_driver.py  apply_industrial_96_closure.py  apply_industrial_96_product_closure.py  apply_mobile_shell_refactor.py  apply_pr87_review_fixes.py  assemble_external_ga_evidence_bundle.py  backup_postgres.py  backup_sqlite.py  browserstack_android_smoke.py  build_release.sh  bump_version_surfaces.py  check_alert_rules_fire.py  check_audit_checkpoint.py  check_bigseller_connector_contract.py  check_bigseller_route_enablement.py  check_branch_protection_contract.py  check_ci_evidence_contract.py  check_config_profiles.py  check_contract_bidirectional_diff.py  check_core_pyright.sh  check_coverage_gates.py  check_current_release_artifact_binding.py  check_customer_distribution_ga.py  check_deployment_readiness.py  check_disk_guard.py  check_enterprise_dependency_contract.py  check_enterprise_readiness.py  check_external_ga_evidence.py  check_feature_stack_boundaries.py  check_ga_release_gate.py  check_github_actions_pinned.py  check_github_branch_protection_live.py  check_github_team_governance_live.py  check_github_workflows.py  check_global_consistency.py  check_import_graph.py  check_industrial_remediation_contract.py  check_industrial_runtime_optimization.py  check_kubernetes_contract.py  (+81 more)
tests/: conftest.py  test_admin_auth.py  test_admin_auth_production_default.py  test_agent_run_abuse_limits.py  test_api_resource_guard.py  test_approval_resume_no_loop.py  test_approval_run_binding.py  test_appsync_industrial_contract.py  test_appsync_migrate_cli.py  test_appsync_offline_outbox.py  test_async_storage_boundaries.py  test_audit_worm_checkpoint.py  test_auto_update_runtime.py  test_backup_encryption_retention.py  test_browser_boundaries.py  test_browser_security.py  test_browserstack_android_smoke.py  (+179 more)
(+555 files in other folders)
