[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnidesk-agent"
version = "1.12.3+root-monorepo-production-ga-candidate"
description = "Local-first multi-channel AI desktop assistant runtime"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.129",
  "starlette>=1.0.1",
  "uvicorn>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0.3",
  "httpx>=0.27",
  "defusedxml>=0.7.1",
  "pillow>=12.2.0",
  "pyautogui>=0.9.54",
  "websockets>=12.0",
  "cryptography>=42.0",
  "jsonschema>=4.22"
]

[project.scripts]
omnidesk = "omnidesk_agent.cli:main"

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0", "pytest-timeout>=2.3", "pytest-asyncio>=0.23", "httpx2>=2.4", "mypy>=1.10", "pyright>=1.1.380", "bandit>=1.7", "pip-audit>=2.7", "build>=1.2", "setuptools>=82.0.1", "wheel>=0.47.0"]
gmail = ["google-auth>=2.29", "google-auth-oauthlib>=1.2", "google-api-python-client>=2.130"]
bedrock = ["boto3>=1.34"]
enterprise = ["psycopg[binary]>=3.2"]
test = ["pytest>=8.0", "pytest-timeout>=2.3", "pytest-asyncio>=0.23", "httpx2>=2.4"]
all = [
  "openai>=1.40",
  "websockets>=12.0",
  "cryptography>=42.0",
  "jsonschema>=4.22",
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.130",
  "boto3>=1.34",
  "pytest>=8.0",
  "pytest-timeout>=2.3",
  "pytest-asyncio>=0.23",
  "httpx2>=2.4",
  "ruff>=0.6"
]

security = ["bandit>=1.7", "pip-audit>=2.7"]

[tool.setuptools.packages.find]
include = ["omnidesk_agent*"]

[tool.ruff.lint]
ignore = ["E701", "E702"]

[tool.pytest.ini_options]
addopts = "-p no:ddtrace"
markers = [
  "unit: fast deterministic unit tests",
  "integration: cross-module integration tests",
  "security: security and abuse-resistance tests",
  "e2e: end-to-end runtime tests",
  "soak: long-running reliability tests",
  "slow: tests that are not part of the PR fast gate",
  "requires_docker: tests requiring a container runtime",
  "requires_network: tests requiring external network access",
  "requires_postgres: tests requiring a PostgreSQL service"
]
