[build-system]
requires = ["setuptools>=82.0.1,<83", "wheel>=0.47.0,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "omnidesk-agent"
version = "1.12.7+root-monorepo-production-ga-candidate"
description = "Local-first multi-channel AI desktop assistant runtime"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.129,<1",
  "starlette>=1.0.1,<2",
  "uvicorn>=0.27,<1",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.3,<7",
  "httpx>=0.27,<1",
  "defusedxml>=0.7.1,<1",
  "pillow>=12.3.0,<13",
  "pyautogui>=0.9.54,<1",
  "websockets>=12.0,<16",
  "cryptography>=42.0,<50",
  "jsonschema>=4.22,<5"
]

[project.scripts]
omnidesk = "omnidesk_agent.cli:main"

[project.optional-dependencies]
llm = ["openai>=1.40,<3"]
dev = ["ruff>=0.6,<1", "pytest>=8.0,<10", "pytest-cov>=5.0,<8", "pytest-timeout>=2.3,<3", "pytest-asyncio>=0.23,<2", "httpx2>=2.4,<3", "mypy>=1.10,<2", "pyright>=1.1.380,<2", "bandit>=1.7,<2", "pip-audit>=2.7,<3", "build>=1.2,<2", "setuptools>=82.0.1,<83", "wheel>=0.47.0,<1"]
gmail = ["google-auth>=2.29,<3", "google-auth-oauthlib>=1.2,<2", "google-api-python-client>=2.130,<3"]
bedrock = ["boto3>=1.34,<2"]
enterprise = ["psycopg[binary]>=3.2,<4"]
test = ["pytest>=8.0,<10", "pytest-timeout>=2.3,<3", "pytest-asyncio>=0.23,<2", "httpx2>=2.4,<3"]
all = [
  "openai>=1.40,<3",
  "websockets>=12.0,<16",
  "cryptography>=42.0,<50",
  "jsonschema>=4.22,<5",
  "google-auth>=2.29,<3",
  "google-auth-oauthlib>=1.2,<2",
  "google-api-python-client>=2.130,<3",
  "boto3>=1.34,<2",
  "pytest>=8.0,<10",
  "pytest-timeout>=2.3,<3",
  "pytest-asyncio>=0.23,<2",
  "httpx2>=2.4,<3",
  "ruff>=0.6,<1"
]
security = ["bandit>=1.7,<2", "pip-audit>=2.7,<3"]

[tool.setuptools.packages.find]
include = ["omnidesk_agent*"]

[tool.pytest.ini_options]
addopts = "-p no:ddtrace"
markers = [
  "unit: fast deterministic unit tests",
  "integration: cross-module integration tests",
  "security: security and abuse-resistance tests",
  "e2e: end-to-end runtime tests",
  "soak: long-running reliability tests",
  "slow: tests that are not part of the PR fast gate",
  "requires_docker: tests requiring a container runtime",
  "requires_network: tests requiring external network access",
  "requires_postgres: tests requiring a PostgreSQL service"
]
