[build-system]
requires = ["setuptools>=83.0.0,<84", "wheel>=0.47.0,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "omnidesk-agent"
version = "1.12.7+root-monorepo-production-ga-candidate"
description = "Local-first multi-channel AI desktop assistant runtime"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.129,<1",
  "starlette>=1.0.1,<2",
  "uvicorn>=0.27,<1",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.3,<7",
  "httpx>=0.27,<1",
  "defusedxml>=0.7.1,<1",
  "pillow>=12.3.0,<13",
  "pyautogui>=0.9.54,<1",
  "websockets>=12.0,<16",
  "python-multipart>=0.0.22,<1",
  "psutil>=5.9,<8",
  "cryptography>=48.0.1,<50",
]

[project.optional-dependencies]
enterprise = ["psycopg[binary]>=3.2,<4"]
langchain = ["langchain>=0.2,<2", "langchain-community>=0.2,<2"]
redis = ["redis>=5,<8"]
vector = ["sentence-transformers>=3,<6", "faiss-cpu>=1.8,<2"]
local-models = ["llama-cpp-python>=0.2.90,<1"]
dev = ["build>=1.2,<2", "ruff>=0.8,<1", "pyright>=1.1.390,<2"]
test = ["pytest>=9.0.3,<10", "pytest-cov>=5,<8", "pytest-timeout>=2.4,<3", "pytest-asyncio>=0.23,<2", "httpx2>=2.4,<3"]
security = ["bandit>=1.8,<2", "pip-audit>=2.10,<3"]

[project.scripts]
omnidesk = "omnidesk_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["omnidesk_agent*"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "live: tests that require live services, credentials, stores, or devices",
  "slow: tests that are intentionally slow or resource-intensive",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error::ResourceWarning",
  "ignore:coroutine 'AsyncMockMixin\\._execute_mock_call' was never awaited:RuntimeWarning",
]
