[package]
name = "omnidesk_desktop"
version = "1.11.7"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", default-features = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
